<resources>
    <string name="app_name" translatable="false">PokeStat</string>
    <string name="enter_pokemon_name">Enter Pokemon name</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="nom">Name :</string>
    <string name="type">Type :</string>
    <string name="poids">Weight :</string>
    <string name="taille">Tall :</string>
    <string name="statistiques">Statistics :</string>
    <string name="view_on_website">View On Website</string>
    <string name="extract_data">Extract Data</string>
    <string name="close">Close</string>
    <string name="end_request">END REQUEST</string>
    <string name="error_no_dom_entity">No Dom Entity</string>
</resources>